--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "indi-webpack-plugin",
+    "name": "nyx-webpack-plugin",
     "description": "",
     "version": "1.0.0",
     "type": "module",
